fix swagger ui path params, add search support in community
